# mvvm

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  makefile  sonar-project.properties  vcpkg.json
app/: CMakeLists.txt  myapp.cpp  myapp.h
app/include/app/: myapp.h
app/model/: user.cpp  user.h
app/view/: login.cpp  login.h
app/viewmodel/: LoginViewModel.cpp  LoginViewModel.h
cmake/: fonts.cmake  groups.cmake  header.cmake
cmd/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/cmake/: command.cmake  reactive.cmake  ui.cmake
core/command/: basic-channel.cpp  basic-channel.h  engine.cpp  message-queue.cpp
core/command/message/: event.cpp  event.h
core/command/middleware/: default.cpp  default.h  empty.cpp  empty.h  functor.cpp  functor.h  lambda.cpp  lambda.h
core/reactive/: bind.cpp  observable.cpp
core/reactive/maybe/: just.cpp  just.h  nothing.cpp  nothing.h
core/reactive/observable/: lambda_observable.cpp  observable_base.cpp  subject.cpp
core/reactive/observer/: lambda_observer.h
core/ui/common/: size.cpp
core/ui/component/: button.cpp  label.cpp  menu.cpp  text.cpp
core/ui/event/: resize.cpp  resize.h
core/ui/widget/: appbase.cpp  appbase.h  appglw.cpp  appglw.h  application.cpp  application.h  appsdl.cpp  appsdl.h  container.cpp  principal.cpp  principal.h  widget.cpp  window.cpp
include/command/: channel.h  engine.h  message-queue.h  message.h  middleware.h
include/reactive/: bind.h  future.h  global.h  maybe.h  observable.h  observer.h  operations.h  option.h  unsubscribe.h
include/reactive/observable/: observable_base.h  replay_subject.h  subject.h
include/reactive/observer/: subscriber.h  unsubscription.h
include/ui/common/: size.h
include/ui/components/: button.h  label.h  menu.h  text.h
include/ui/event/: listener.h
include/ui/fonts/: material.h
include/ui/widget/: app.h  container.h  widget.h  window.h
scripts/: cmake.sh  emsdk.sh  sonar-install.sh  sonar.sh  update.sh  vcpkg.sh
test/: CMakeLists.txt  testtmain.cpp  testtmain.h
test/ui/: command_test.cpp
test/ui/middleware/: log.cpp  log.h
tests/: CMakeLists.txt
tests/command/: command_test.cpp  message_test.cpp
tests/command/message/: dummy.cpp  dummy.h  event.cpp  event.h
tests/reactive/: observable_test.cpp
tests/reactive/observer/: console.h
ui/: CMakeLists.txt
ui/include/ui/: app.h  container.h  menu.h  text.h  widget.h  window.h
ui/include/ui/command/: abstract.h  channel.h  engine.h  message.h  middleware.h
ui/src/: app.cpp
ui/src/backend/: imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.cpp  imgui_impl_sdlrenderer.h
ui/src/command/: engine.cpp  simple_channel.cpp  simple_channel.h
ui/src/command/message/: Event.cpp  Event.h  event.cpp  event.h
ui/src/command/middleware/: command.h  default.cpp  default.h  empty.cpp  empty.h  functor.cpp  functor.h  lambda.cpp  lambda.h
ui/src/fonts/: material.cpp
ui/src/lib/: imgui_config.h
ui/src/lib/dock/: imgui_dock.cpp  imgui_dock.h
ui/src/lib/spectrum/: imgui_spectrum.cpp
ui/src/widgets/: container.cpp  menu.cpp  text.cpp  widget.cpp  window.cpp
ui/test/: command_test.cpp
web/: CMakeLists.txt  main.cpp  shell_minimal.html
